Fix bundler version temporarily to avoid ci fails
ref: https://github.com/rubygems/rubygems/issues/5183

This error still raise with latest bundler(2.3.3)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,6 +70,7 @@ jobs:
       with:
         ruby-version: ${{ matrix.ruby }}
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+        bundler: 2.2.31
     - name: Run tests
       env:
         RAILS_VERSION: ${{ matrix.rails_version }}
